--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,25 @@
   </head>
 
   <body>
-  <%= flash[notice] %>
+  <header>
+  <div class="header-inner">
+  <h2>
+  <%= link_to "名言集", root_path %>
+  </h2>
+  <h2>
+  <% if session[:user_id] %>
+      <%= session[:user_id] %>
+  <% else %>
+      <%= link_to "ログイン", login_path %>
+  <% end %>
+  </h2>
+  </header>
     <%= yield %>
+  <footer>
+  名言集
+  <h4>@ 2020 kotoba corporation AllRightsReserved </h4>
+    
+  </footer>
+    
   </body>
 </html>
