--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,14 @@
-
-
 <main>
-<h1 class= "new"><%= link_to "名言を叫べ！！", new_post_path %></h1>
-<ul>
-	<% @posts.each do |post| %>
-	<li>
-        <%= link_to post.meigen, post_path(post) %>
-        <%= link_to "編集", edit_post_path(post) %>
-        <%= link_to "[X]", post_path(post), method: :delete, data: {confirm: "削除しますか?"}%>
-    </li>
-	<% end %>
-</ul>
+    <h1 class= "post-index"><%= link_to "名言を叫べ！！", new_post_path %></h1>
+
+    <ul>
+        <% @posts.each do |post| %>
+            <li>
+                <%= link_to post.meigen, post_path(post) %>
+                <%= link_to "編集", edit_post_path(post) %>
+                <%= link_to "[X]", post_path(post), method: :delete, data: {confirm: "削除しますか?"}%>
+            </li>
+        <% end %>
+    </ul>
 </main>
 
