--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
-<h2 class="post-show-meigen">
-    <%= @post.meigen %>
-</h2>
+<div class="post-show-meigen">
+    <%= @post.user.name %>
+    <h2><%= @post.meigen %></h2>
+</div>
