--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <%= yield %>
   <footer>
   名言集
-  <h4>@ 2020 kotoba corporation AllRightsReserved </h4>
+  <h4> © 2020 kotoba corporation AllRightsReserved </h4>
     
   </footer>
     
