バリデーション追加

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,9 +1,9 @@
 <% if post.liked_by?(current_user) %>
     <%= link_to(post_add_path(post), method: :delete, remote: true, id: :"like-button-#{post.id}") do %>
-        <i class="fa-lg fas fa-heart icon-btn liked"></i>
+        <i class="fa-lg fas fa-heart icon-btn liked">いいね消す</i>
     <% end %>
 <% else %>
     <%= link_to(post_add_path(post), method: :post, remote: true, id: :"like-button-#{post.id}") do %>
-        <i class="fa-lg fas fa-heart icon-btn not-like"></i>
+        <i class="fa-lg fas fa-heart icon-btn not-like">いいね</i>
     <% end %>
 <% end %>
