コメント機能追加（未完成）

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,3 +2,15 @@
     <%= @post.user.name %>
     <h2><%= @post.meigen %></h2>
 </div>
+
+<%= form_for @comments do |f| %>
+    <%= f.text_area :comment, size: "40x5" %>
+    <%= f.submit '送信', class: "btn-sm btn-primary" %>
+<% end %>
+
+<% @comments.each do |comment| %>
+    <%= comment.user.name %>
+    <%= comment.comment %>
+    <%= link_to "削除", post_comment_path(post, comment), method: :delete %>
+<% end %>
+
