--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,12 @@ ul > li{
     text-align: center;
 }
 
+.show-comment {
+    text-align: center;
+    font-weight: bold;
+}
+
 footer {
     text-align: center;
+    padding-top: 15px;
 }
