--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,10 @@
   </header>
     <%= yield %>
   <footer>
-  名言集
-  <h4> © 2020 kotoba corporation AllRightsReserved </h4>
-    
+  <div class="text-secondary">
+    <h5> 名言集 </h5>
+    <h4> © 2020 kotoba corporation AllRightsReserved </h4>
+  </div>
   </footer>
     
   </body>
