--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,11 @@
     height: 60px; 
 }
 
+.link_layout{
+    text-decoration: none;
+    color: #333;
+}
+
 .post-index {
     text-align: center;
 }
@@ -14,6 +19,10 @@
 /* いいねアイコン */
 .fa-heart {
     color: crimson;
+}
+
+.fas .fa-times-circle{
+    color: #333;
 }
 
 .post-new {
